MB-16497: Address critical data race between DCP-Producer and Flusher

This data race can be addressed by ensuring that the producer compresses
a copy of the item rather than the original one.

WARNING: ThreadSanitizer: data race (pid=17884)
  Write of size 8 at 0x7d14000dcd98 by thread T14 (mutexes: write M149761):
    #0 SingleThreadedRCPtr<Blob>::swap() ep-engine/src/atomic.h:322:9 (ep.so+0x00000005b79d)
    #1 SingleThreadedRCPtr<Blob>::reset() ep-engine/src/atomic.h:279 (ep.so+0x00000005b79d)
    #2 Item::setData() ep-engine/src/item.h:677 (ep.so+0x00000005b79d)
    #3 Item::compressValue() ep-engine/src/item.h:434:17 (ep.so+0x0000000661df)
    #4 DcpProducer::getNextItem() ep-engine/src/dcp/producer.cc:787:50 (ep.so+0x000000060c42)
    #5 DcpProducer::step() ep-engine/src/dcp/producer.cc:269:16 (ep.so+0x00000005fff1)
    #6 EvpDcpStep() ep-engine/src/ep_engine.cc:1481:23 (ep.so+0x0000000ab82b)
    #7 mock_dcp_step() memcached/programs/engine_testapp/engine_testapp.cc:476:12 (engine_testapp+0x0000004c5b25)
    #8 perf_dcp_client() ep-engine/tests/ep_perfsuite.cc:615:33 (ep_perfsuite.so+0x00000000ff48)
    #9 dcp_client_thread() ep-engine/tests/ep_perfsuite.cc:669 (ep_perfsuite.so+0x00000000ff48)
    #10 platform_thread_wrap platform/src/cb_pthreads.c:23:5 (libplatform.so.0.1.0+0x000000004161)

Previous read of size 8 at 0x7d14000dcd98 by thread T7 (mutexes: write M11737):
    #0 SingleThreadedRCPtr<Blob>::gimme() const ep-engine/src/atomic.h:317:16 (ep.so+0x0000001524d2)
    #1 SingleThreadedRCPtr<Blob>::SingleThreadedRCPtr() ep-engine/src/atomic.h:267 (ep.so+0x0000001524d2)
    #2 CouchRequest::CouchRequest() ep-engine/src/couch-kvstore/couch-kvstore.cc:198 (ep.so+0x0000001524d2)
    #3 CouchKVStore::set() ep-engine/src/couch-kvstore/couch-kvstore.cc:388:25 (ep.so+0x000000157a98)
    #4 EventuallyPersistentStore::flushOneDelOrSet() ep-engine/src/ep.cc:3411:9 (ep.so+0x0000000925bc)
    #5 EventuallyPersistentStore::flushVBucket() ep-engine/src/ep.cc:3264:47 (ep.so+0x000000091115)
    #6 Flusher::flushVB() ep-engine/src/flusher.cc:296:13 (ep.so+0x0000000f05f5)
    #7 Flusher::step() ep-engine/src/flusher.cc:186:9 (ep.so+0x0000000eec85)
    #8 FlusherTask::run() ep-engine/src/tasks.cc:63:12 (ep.so+0x0000001292f2)
    #9 ExecutorThread::run() ep-engine/src/executorthread.cc:115:26 (ep.so+0x0000000ea40d)
    #10 launch_executor_thread() ep-engine/src/executorthread.cc:33:9 (ep.so+0x0000000e9fd5)

Change-Id: I980f1e874418468e71886d14c2406bccdae2ac2e
Reviewed-on: http://review.couchbase.org/55973
Tested-by: buildbot <build@couchbase.com>
Reviewed-by: Chiyoung Seo <chiyoung@couchbase.com>